--- a/src/rendaFixa.html
+++ b/src/rendaFixa.html
@@ -10,7 +10,9 @@
     <header>
         <h1>Renda Fixa</h1>
         <div class="logo">
-            <img src="logo.png" alt="Logo da Sua Empresa" class="logo-img">
+            <a href="home.html">
+                <img src="logo.png" alt="FinanceiraBR" class="logo-img">
+            </a>
         </div>
     </header>
 
