--- a/src/home.html
+++ b/src/home.html
@@ -22,6 +22,16 @@
         </div>
     </section>
 
+    <div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
+
     <footer>
         <p>© 2023 FinanceiraBR</p>
     </footer>
